Create RoutingDestinationMessageService and tests
[#179529020]